# leftwm-layouts

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
demo/: Cargo.toml
demo-ascii/: Cargo.toml
demo-ascii/src/: main.rs
demo/src/: main.rs
leftwm-layouts/: Cargo.toml  README.md
leftwm-layouts/src/: geometry.rs  lib.rs  util.rs
leftwm-layouts/src/geometry/: calc.rs  column_type.rs  direction.rs  flip.rs  flipped.rs  mod.rs  rect.rs  reserve.rs  reserve_space.rs  rotation.rs  size.rs  split.rs  split_axis.rs
leftwm-layouts/src/layouts/: center_main.rs  default.ron  defaults.rs  dwindle.rs  even_horizontal.rs  fakebonacci.rs  fibonacci.rs  grid.rs  layout.rs  layout_definition.rs  layouts copy 2.ron  layouts copy.ron  layouts.ron  layouts.rs  main_and_horizontal_stack.rs  main_and_vert_stack.rs  mod.rs  monocle.rs  new_layout_definition.rs
leftwm-layouts/src/layouts/basic/: main_stack.rs  mod.rs  stack.rs  stack_main_stack.rs
leftwm-layouts/src/layouts/columns/: main_stack.rs  mod.rs  stack.rs  stack_main_stack.rs  three_column.rs  two_column.rs
src/: geometry.rs  lib.rs
src/layouts/: main_and_vert_stack.rs  mod.rs  monocle.rs
