[package]
name = "leftwm-layouts"
version = "0.0.1"
edition = "2021"

license-file = "LICENSE"
description = "A library providing pre-defined but modifiable window layouts for window managers"
homepage = "https://leftwm.org/"
repository = "https://github.com/leftwm/leftwm-layouts"
readme = "README.md"
keywords = ["leftwm", "layouts", "window-manager"]

[dependencies]
