[package]
name = "leftwm-layouts"
version = "0.0.8"
edition = "2021"

license = "BSD-3-Clause"
description = "A library providing pre-defined but modifiable window layouts for window managers"
homepage = "https://leftwm.org/"
repository = "https://github.com/leftwm/leftwm-layouts"
readme = "README.md"
keywords = ["leftwm", "layouts", "window-manager"]

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.7"

[dev-dependencies]
ron = "0.7"