[package]
name = "leftwm-layouts"
version = "0.8.3"
edition = "2021"

license = "BSD-3-Clause"
description = "Provides customizable layouts for list-based dynamic tiling window managers"
homepage = "https://leftwm.org/"
repository = "https://github.com/leftwm/leftwm-layouts"
readme = "README.md"
keywords = ["leftwm", "layouts", "window-manager"]

[dependencies]
serde = { version = "1", features = ["derive"] }
